# MyPythonClassWorks

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: powershell_helpers.ps1
src/MyPythonClassWork.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/my_project/: __init__.py  main.py
tests/: test_main.py
