[project]
name = "MyPythonClassWork"
version = "0.1.0"
description = "A minimal Python project scaffold"
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[project.scripts]
my-project = "mypythonclasswork.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
